--- a/manifest.json
+++ b/manifest.json
@@ -198,6 +198,10 @@
         "enterprise_zenpacks/ZenPacks.zenoss.CiscoMonitor": {
             "repo": "zenoss/ZenPacks.zenoss.CiscoMonitor", 
             "ref": "develop"
+        },
+        "zenpacks/ZenPacks.zenoss.Layer2": {
+            "repo": "zenoss/ZenPacks.zenoss.Layer2", 
+            "ref": "develop"
         }
     }
 }
