--- a/manifest.json
+++ b/manifest.json
@@ -2,217 +2,221 @@
 {
     "repos": {
         "externallibs": {
-            "repo": "zenoss/zenoss-externallibs", 
+            "repo": "zenoss/zenoss-externallibs",
             "ref": "develop"
-        }, 
+        },
         "zenpacks/ZenPacks.zenoss.Microsoft.Windows": {
-            "repo": "zenoss/ZenPacks.zenoss.Microsoft.Windows", 
+            "repo": "zenoss/ZenPacks.zenoss.Microsoft.Windows",
             "ref": "master"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.ZenDeviceACL": {
-            "repo": "zenoss/ZenPacks.zenoss.ZenDeviceACL", 
+            "repo": "zenoss/ZenPacks.zenoss.ZenDeviceACL",
             "ref": "develop"
-        }, 
+        },
         "serviced.shell": {
-            "repo": "zenoss/serviced.shell", 
+            "repo": "zenoss/serviced.shell",
             "ref": "develop"
-        }, 
+        },
         "utils": {
-            "repo": "zenoss/zenoss-utils", 
+            "repo": "zenoss/zenoss-utils",
             "ref": "develop"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.UCSCapacity": {
-            "repo": "zenoss/ZenPacks.zenoss.UCSCapacity", 
+            "repo": "zenoss/ZenPacks.zenoss.UCSCapacity",
             "ref": "develop"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.CatalogService": {
-            "repo": "zenoss/ZenPacks.zenoss.CatalogService", 
+            "repo": "zenoss/ZenPacks.zenoss.CatalogService",
             "ref": "develop"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.PropertyMonitor": {
-            "repo": "zenoss/ZenPacks.zenoss.PropertyMonitor", 
+            "repo": "zenoss/ZenPacks.zenoss.PropertyMonitor",
             "ref": "develop"
-        }, 
+        },
         "zenpacks/ZenPacks.zenoss.PythonCollector": {
-            "repo": "zenoss/ZenPacks.zenoss.PythonCollector", 
+            "repo": "zenoss/ZenPacks.zenoss.PythonCollector",
             "ref": "master"
         },
         "zenpacks/ZenPacks.zenoss.Dashboard": {
-            "repo": "zenoss/ZenPacks.zenoss.Dashboard", 
+            "repo": "zenoss/ZenPacks.zenoss.Dashboard",
             "ref": "develop"
         },
         "enterprise_zenpacks/ZenPacks.zenoss.AuditLog": {
             "repo": "zenoss/ZenPacks.zenoss.AuditLog",
             "ref": "develop"
-        }, 
+        },
         "zep": {
-            "repo": "zenoss/zenoss-zep", 
+            "repo": "zenoss/zenoss-zep",
             "ref": "develop"
-        }, 
+        },
         "zauth-service": {
-            "repo": "zenoss/zauth-service", 
+            "repo": "zenoss/zauth-service",
             "ref": "develop"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.CiscoUCS": {
-            "repo": "zenoss/ZenPacks.zenoss.CiscoUCS", 
+            "repo": "zenoss/ZenPacks.zenoss.CiscoUCS",
             "ref": "develop"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.PortalIntegration": {
-            "repo": "zenoss/ZenPacks.zenoss.PortalIntegration", 
+            "repo": "zenoss/ZenPacks.zenoss.PortalIntegration",
             "ref": "develop"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.AdvancedSearch": {
-            "repo": "zenoss/ZenPacks.zenoss.AdvancedSearch", 
+            "repo": "zenoss/ZenPacks.zenoss.AdvancedSearch",
             "ref": "develop"
-        }, 
+        },
         "zenpacks/ZenPacks.zenoss.DeviceSearch": {
-            "repo": "zenoss/ZenPacks.zenoss.DeviceSearch", 
+            "repo": "zenoss/ZenPacks.zenoss.DeviceSearch",
             "ref": "master"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.EnterpriseReports": {
-            "repo": "zenoss/ZenPacks.zenoss.EnterpriseReports", 
+            "repo": "zenoss/ZenPacks.zenoss.EnterpriseReports",
             "ref": "develop"
-        }, 
+        },
         "service": {
-            "repo": "zenoss/zenoss-service", 
-            "ref": "develop", 
+            "repo": "zenoss/zenoss-service",
+            "ref": "develop",
             "name": "service"
-        }, 
+        },
         "zenpacks/ZenPacks.zenoss.CalculatedPerformance": {
-            "repo": "zenoss/ZenPacks.zenoss.CalculatedPerformance", 
+            "repo": "zenoss/ZenPacks.zenoss.CalculatedPerformance",
             "ref": "develop"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.EnterpriseSecurity": {
-            "repo": "zenoss/ZenPacks.zenoss.EnterpriseSecurity", 
+            "repo": "zenoss/ZenPacks.zenoss.EnterpriseSecurity",
             "ref": "develop"
-        }, 
+        },
         "zproxy": {
-            "repo": "zenoss/zproxy", 
+            "repo": "zenoss/zproxy",
             "ref": "develop"
-        }, 
+        },
         "../build": {
-            "repo": "zenoss/platform-build", 
-            "ref": "develop", 
+            "repo": "zenoss/platform-build",
+            "ref": "develop",
             "name": "build"
-        }, 
+        },
         "metric-service": {
-            "repo": "zenoss/query", 
+            "repo": "zenoss/query",
             "ref": "develop"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.DistributedCollector": {
-            "repo": "zenoss/ZenPacks.zenoss.DistributedCollector", 
+            "repo": "zenoss/ZenPacks.zenoss.DistributedCollector",
             "ref": "develop"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.DynamicView": {
-            "repo": "zenoss/ZenPacks.zenoss.DynamicView", 
+            "repo": "zenoss/ZenPacks.zenoss.DynamicView",
             "ref": "develop"
-        }, 
+        },
         "golang/src/github.com/zenoss/serviced": {
-            "repo": "zenoss/serviced", 
+            "repo": "zenoss/serviced",
             "ref": "develop"
-        }, 
+        },
         "golang/src/github.com/zenoss/metricshipper": {
-            "repo": "zenoss/metricshipper", 
+            "repo": "zenoss/metricshipper",
             "ref": "develop"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.vSphere": {
-            "repo": "zenoss/ZenPacks.zenoss.vSphere", 
+            "repo": "zenoss/ZenPacks.zenoss.vSphere",
             "ref": "develop"
-        }, 
+        },
         "golang/src/github.com/control-center/serviced": {
-            "repo": "control-center/serviced", 
+            "repo": "control-center/serviced",
             "ref": "develop"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.Microsoft.HyperV": {
-            "repo": "zenoss/ZenPacks.zenoss.Microsoft.HyperV", 
+            "repo": "zenoss/ZenPacks.zenoss.Microsoft.HyperV",
             "ref": "develop"
-        }, 
+        },
         "metric-consumer": {
-            "repo": "zenoss/zenoss.metric.consumer", 
+            "repo": "zenoss/zenoss.metric.consumer",
             "ref": "develop"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.EnterpriseLinux": {
-            "repo": "zenoss/ZenPacks.zenoss.EnterpriseLinux", 
+            "repo": "zenoss/ZenPacks.zenoss.EnterpriseLinux",
             "ref": "develop"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.EnterpriseSkin": {
-            "repo": "zenoss/ZenPacks.zenoss.EnterpriseSkin", 
+            "repo": "zenoss/ZenPacks.zenoss.EnterpriseSkin",
             "ref": "develop"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.EnterpriseCollector": {
-            "repo": "zenoss/ZenPacks.zenoss.EnterpriseCollector", 
+            "repo": "zenoss/ZenPacks.zenoss.EnterpriseCollector",
             "ref": "develop"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.UCSXSkin": {
-            "repo": "zenoss/ZenPacks.zenoss.UCSXSkin", 
+            "repo": "zenoss/ZenPacks.zenoss.UCSXSkin",
             "ref": "develop"
-        }, 
+        },
         "protocols": {
-            "repo": "zenoss/zenoss-protocols", 
+            "repo": "zenoss/zenoss-protocols",
             "ref": "develop"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.StorageBase": {
-            "repo": "zenoss/ZenPacks.zenoss.StorageBase", 
+            "repo": "zenoss/ZenPacks.zenoss.StorageBase",
             "ref": "master"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.NetAppMonitor": {
-            "repo": "zenoss/ZenPacks.zenoss.NetAppMonitor", 
+            "repo": "zenoss/ZenPacks.zenoss.NetAppMonitor",
             "ref": "develop"
-        }, 
+        },
         "zapp": {
-            "repo": "zenoss/zenoss-zapp", 
+            "repo": "zenoss/zenoss-zapp",
             "ref": "develop"
-        }, 
+        },
         "zenpacks/ZenPacks.zenoss.LinuxMonitor": {
-            "repo": "zenoss/ZenPacks.zenoss.LinuxMonitor", 
+            "repo": "zenoss/ZenPacks.zenoss.LinuxMonitor",
             "ref": "master"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.ZenOperatorRole": {
-            "repo": "zenoss/ZenPacks.zenoss.ZenOperatorRole", 
+            "repo": "zenoss/ZenPacks.zenoss.ZenOperatorRole",
             "ref": "develop"
-        }, 
+        },
         "zenpacks/ZenPacks.zenoss.WBEM": {
-            "repo": "zenoss/ZenPacks.zenoss.WBEM", 
+            "repo": "zenoss/ZenPacks.zenoss.WBEM",
             "ref": "master"
-        }, 
+        },
         "core": {
-            "repo": "zenoss/zenoss-prodbin", 
+            "repo": "zenoss/zenoss-prodbin",
             "ref": "develop"
-        }, 
+        },
         "metric-tsdb": {
-            "repo": "zenoss/zenoss.metric.tsdb", 
+            "repo": "zenoss/zenoss.metric.tsdb",
             "ref": "develop"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.EMC.base": {
-            "repo": "zenoss/ZenPacks.zenoss.EMC.base", 
+            "repo": "zenoss/ZenPacks.zenoss.EMC.base",
             "ref": "develop"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.DiscoveryMapping": {
-            "repo": "zenoss/ZenPacks.zenoss.DiscoveryMapping", 
+            "repo": "zenoss/ZenPacks.zenoss.DiscoveryMapping",
             "ref": "develop"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.LDAPAuthenticator": {
-            "repo": "zenoss/ZenPacks.zenoss.LDAPAuthenticator", 
+            "repo": "zenoss/ZenPacks.zenoss.LDAPAuthenticator",
             "ref": "develop"
-        }, 
+        },
         "enterprise_zenpacks/ZenPacks.zenoss.CiscoMonitor": {
-            "repo": "zenoss/ZenPacks.zenoss.CiscoMonitor", 
+            "repo": "zenoss/ZenPacks.zenoss.CiscoMonitor",
             "ref": "develop"
         },
         "zenpacks/ZenPacks.zenoss.Layer2": {
-            "repo": "zenoss/ZenPacks.zenoss.Layer2", 
+            "repo": "zenoss/ZenPacks.zenoss.Layer2",
             "ref": "develop"
         },
         "enterprise_zenpacks/ZenPacks.zenoss.PredictiveThreshold": {
-            "repo": "zenoss/ZenPacks.zenoss.PredictiveThreshold", 
+            "repo": "zenoss/ZenPacks.zenoss.PredictiveThreshold",
             "ref": "develop"
         },
         "zenpacks/ZenPacks.zenoss.Import4": {
-            "repo": "zenoss/ZenPacks.zenoss.Import4", 
+            "repo": "zenoss/ZenPacks.zenoss.Import4",
             "ref": "develop"
         },
         "enterprise_zenpacks/ZenPacks.zenoss.CiscoUCSCentral": {
-            "repo": "zenoss/ZenPacks.zenoss.CiscoUCSCentral", 
+            "repo": "zenoss/ZenPacks.zenoss.CiscoUCSCentral",
+            "ref": "develop"
+        },
+        "enterprise_zenpacks/ZenPacks.zenoss.ComponentGroups": {
+            "repo": "zenoss/ZenPacks.zenoss.ComponentGroups",
             "ref": "develop"
         }
     }
