fixes ZEN-18805: The ref for LinuxMonitor has been changed to develop.

--- a/manifest.json
+++ b/manifest.json
@@ -165,7 +165,7 @@
         },
         "zenpacks/ZenPacks.zenoss.LinuxMonitor": {
             "repo": "zenoss/ZenPacks.zenoss.LinuxMonitor",
-            "ref": "master"
+            "ref": "develop"
         },
         "enterprise_zenpacks/ZenPacks.zenoss.ZenOperatorRole": {
             "repo": "zenoss/ZenPacks.zenoss.ZenOperatorRole",
