ZEN-20684: Add ZenPOP3 to the manifest

--- a/manifest.json
+++ b/manifest.json
@@ -290,6 +290,10 @@
         "zenpacks/ZenPacks.zenoss.ZenMail": {
             "repo": "zenoss/ZenPacks.zenoss.ZenMail",
             "ref": "support/5.0.x"
+        },
+        "zenpacks/ZenPacks.zenoss.ZenPOP3": {
+            "repo": "zenoss/ZenPacks.zenoss.ZenPOP3",
+            "ref": "support/5.0.x"
         }
     }
 }
