Use LinuxMonitor 1.4.0 tag for support/5.1.x.

--- a/manifest.json
+++ b/manifest.json
@@ -233,7 +233,7 @@
         },
         "zenpacks/ZenPacks.zenoss.LinuxMonitor": {
             "repo": "zenoss/ZenPacks.zenoss.LinuxMonitor",
-            "ref": "release/1.4.0"
+            "ref": "1.4.0"
         },
         "enterprise_zenpacks/ZenPacks.zenoss.ZenDeviceACL": {
             "repo": "zenoss/ZenPacks.zenoss.ZenDeviceACL",
