--- a/manifest.json
+++ b/manifest.json
@@ -71,7 +71,7 @@
         },
         "zenpacks/ZenPacks.zenoss.Microsoft.Windows": {
             "repo": "zenoss/ZenPacks.zenoss.Microsoft.Windows",
-            "ref": "release/2.5.0"
+            "ref": "2.5.0"
         },
         "core": {
             "repo": "zenoss/zenoss-prodbin",
