support/5.1.x: Use Microsoft.HyperV 1.2.0.

--- a/manifest.json
+++ b/manifest.json
@@ -305,7 +305,7 @@
         }, 
         "enterprise_zenpacks/ZenPacks.zenoss.Microsoft.HyperV": {
             "repo": "zenoss/ZenPacks.zenoss.Microsoft.HyperV", 
-            "ref": "release/1.2.0"
+            "ref": "1.2.0"
         }, 
         "enterprise_zenpacks/ZenPacks.zenoss.DiscoveryMapping": {
             "repo": "zenoss/ZenPacks.zenoss.DiscoveryMapping", 
